argo/argocd/projects/homelab/longhorn/resources/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`longhorn.local.pleejr.org`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: longhorn-cert-prod
